templates/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: some-app
  namespace: apps
  labels:
    app: some-app
    groups: blah
spec:
  replicas: 1
  selector:
    matchLabels:
      app: some-app
  template:
    metadata:
      labels:
        app: some-app
        group: blah
    spec:
#      affinity:
#        podAntiAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#          - topologyKey: kubernetes.io/hostname
#            labelSelector:
#              matchLabels:
#                app: some-app
#        nodeAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            nodeSelectorTerms:
#            - matchExpressions:
#              - key: location.derpaholic.com
#                operator: In
#                values:
#                - newport_news
      containers:
      - name: main
        image: nginx
#        command:
#          -
#        args:
#          -
#        envFrom:
#          - configMapRef:
#              name: special-config
#        env:
#          - name: MESSAGE
#            value: "hello world"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "100m"
            memory: "128Mi"
          requests:
            cpu: "25m"
            memory: "32Mi"
        volumeMounts:
        - name: some-pvc
          mountPath: /pvc
        - name: some-config
          mountPath: /config
        - name: some-secret
          mountPath: /secret
      volumes:
      - name: some-pvc
        persistentVolumeClaim:
          claimName: some-pvc
      - name: some-secret
        secret:
          secretName: secret
      - name: some-config
        configMap:
          name: config
          items:
          - key: config.yaml
            path: config.yaml     
      dnsPolicy: ClusterFirst
      restartPolicy: Always
