templates/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: some-svc
  namespace: apps
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80       
      targetPort: 80 # the port for the pod
  selector:
    app: webdav-api
